Fixed validation (proper annotations usage), fixed useless validation, updated tests (deleted a bunch of useless tests), added entityGraph to event and review to optimize selects